tests/inc/out.txt
error: mismatched types: expected int, found string
  ┌─ err.sml:3:9
  │
3 │ val _ = inc "nope"
  │         ^^^^^^^^^^

typechecking failed
